# quad_engine

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/lib/: google_test.cmake
demo_application/: CMakeLists.txt
demo_application/windows/: main.cpp
include/quad/: engine.hpp
modules/backend/: CMakeLists.txt
src/: engine.cpp
tests/: CMakeLists.txt  engine.cpp
